k8s/ingress/nginx-ingress-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-ingress-controller
    namespace: ingress-nginx
    labels:
        app: nginx-ingress-controller
spec:
    replicas: 2
    selector:
        matchLabels:
            app: nginx-ingress-controller
    template:
        metadata:
            labels:
                app: nginx-ingress-controller
        spec:
            affinity:
                nodeAffinity:
                    preferredDuringSchedulingIgnoredDuringExecution:
                        - weight: 100
                          preference:
                              matchExpressions:
                                  - key: topology.kubernetes.io/zone
                                    operator: In
                                    values:
                                        - simin
            containers:
                - name: nginx-ingress-controller
                  image: k8s.gcr.io/ingress-nginx/controller:v1.8.1
                  args:
                      - /nginx-ingress-controller
                      - --configmap=$(POD_NAMESPACE)/nginx-configuration
                      - --tcp-services-configmap=$(POD_NAMESPACE)/tcp-services
                      - --udp-services-configmap=$(POD_NAMESPACE)/udp-services
                      - --publish-service=$(POD_NAMESPACE)/ingress-nginx
                      - --annotations-prefix=nginx.ingress.kubernetes.io
                  ports:
                      - name: http
                        containerPort: 80
                      - name: https
                        containerPort: 443
                  resources:
                      requests:
                          cpu: 1
                          memory: 1Gi
                      limits:
                          cpu: 2
                          memory: 2Gi
                  livenessProbe:
                      httpGet:
                          path: /healthz
                          port: 10254
                          scheme: HTTP
                      initialDelaySeconds: 30
                      timeoutSeconds: 5
                  readinessProbe:
                      httpGet:
                          path: /healthz
                          port: 10254
                          scheme: HTTP
                      periodSeconds: 10
                      timeoutSeconds: 5
