k8s/ingress/core-external-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: core-external
    namespace: auth
spec:
    type: ExternalName
    externalName: core.core.svc.cluster.local
    ports:
        - port: 8080
          targetPort: 8080
          name: http
