k8s/ingress/ingress-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: ingress-nginx
    namespace: ingress-nginx
    annotations:
        arvancloud.io/load-balancer-type: "application"
spec:
    type: LoadBalancer
    ports:
        - name: http
          port: 80
          targetPort: 80
        - name: https
          port: 443
          targetPort: 443
    selector:
        app: nginx-ingress-controller
