k8s/ingress/nginx-lb-external-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nginx-lb-external
    namespace: auth
spec:
    type: ExternalName
    externalName: nginx-lb-service.ingress-nginx.svc.cluster.local
    ports:
        - port: 80
          targetPort: 80
          name: http
