k8s/ingress/auth-http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: auth-http-ingress
    namespace: auth
spec:
    ingressClassName: nginx
    rules:
        - host: auth-http-c9a4c1e532-auth.apps.ir-central1.arvancaas.ir
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: auth-http
                            port:
                                number: 8082
