k8s/ingress/core-direct-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: core-direct-ingress
    namespace: core
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
        nginx.ingress.kubernetes.io/use-regex: "false"
        nginx.ingress.kubernetes.io/proxy-body-size: "50m"
        nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
    ingressClassName: nginx
    rules:
        - host: core-direct-c9a4c1e532-core.apps.ir-central1.arvancaas.ir
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: core
                            port:
                                number: 8080
