k8s/ingress/core-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: core-ingress
    namespace: core
spec:
    ingressClassName: nginx
    rules:
        - host: core-c9a4c1e532-core.apps.ir-central1.arvancaas.ir
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: core
                            port:
                                number: 8080
