k8s/ingress/health-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: health-ingress
    namespace: auth
spec:
    ingressClassName: nginx
    rules:
        - host: health-c9a4c1e532-auth.apps.ir-central1.arvancaas.ir
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: health-service
                            port:
                                number: 80
